feat: update booking schema
